# fizz-buzz-like-a-pro

./: CMakeLists.txt  buzzsender.h  controller.cpp  fileoutstream.cpp  fizzsender.h  outstream.h  sender.h
number/: intnumber.h  number.h
outstream/: fileoutstream.h
sender/: buzzsender.h  fizzsender.cpp
